# echoo

./: .gitignore  README.md  pubspec.yaml
admin_web/echoo-web/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
android/app/: build.gradle  proguard-rules.pro
backend/echoo_backend/: Cargo.toml  README.md  init_db.sh
backend/echoo_backend/migrations/: 20240126_remove_gpt4_mini_tokens.sql  20240320_add_bitcoin_payments.sql  20240320_add_chat_history.sql  20240321_remove_bitcoin_payments.sql  20240321_remove_invite_code.sql  20240322_add_api_calls.sql  20240322_add_invite_code.sql  20240324_add_user_vip.sql  20240324_add_vip_activation.sql  20240325_update_vip_codes.sql  schema.sql
backend/echoo_backend/src/: main.rs
backend/echoo_backend/src/models/: user.rs
backend/echoo_backend/src/services/: auth.rs  constants.rs  middleware.rs  mod.rs  model_management_service.rs  openrouter.rs  user_service.rs
backend/echoo_backend/src/services/routes/: chat.rs  mod.rs  model.rs  settings.rs  user.rs
frontend/echoo/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  main.dart
lib/l10n/: ar.dart  en.dart  es.dart  ja.dart  ko.dart  zh.dart
lib/pages/: home_page.dart  login_page.dart  register_page.dart  settings_page.dart
lib/services/: ollama_service.dart  state_manager.dart
lib/widgets/: alert_dialog_helper.dart  api_calls_card.dart  auth_settings.dart  font_size_settings.dart  language_settings.dart  message_bubble.dart  (+5 more)
linux/: my_application.cc
(+75 files in other folders)
